fix: set proper gap in abouts section between text and picture at 768px device width

--- a/plants/style/style.css
+++ b/plants/style/style.css
@@ -447,6 +447,7 @@ body.locked {
 @media (max-width: 992px) {
   .about__row {
     flex-direction: column;
+    gap: 65px;
   }
 } 
 @media (max-width: 767px) {
@@ -514,6 +515,8 @@ body.locked {
   .about__title {
     /* font-size: 35px;
     line-height: 46px; */
+    /* для сходства с макетом */
+    margin: 0 0 50px 0;
     text-align: center;
   }
 }
